--- a/index.css
+++ b/index.css
@@ -34,6 +34,15 @@ body {
   letter-spacing: 0.03em;
   font-style: Raleway;
 }
+.footer-logo {
+  color: var(--white);
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.193;
+  letter-spacing: 0.03em;
+  font-style: Raleway;
+}
 .blue-web {
   color: var(--blue);
 }
@@ -79,10 +88,10 @@ body {
   letter-spacing: 0.02em;
 }
 .mail-link:hover {
-  color: #800080;
+  color: #2196f3;
 }
 .mail-link:focus {
-  color: #800080;
+  color: #2196f3;
 }
 
 .phone-link {
@@ -95,10 +104,10 @@ body {
   letter-spacing: 0.02em;
 }
 .phone-link:hover {
-  color: #800080;
+  color: #2196f3;
 }
 .phone-link:focus {
-  color: #800080;
+  color: #2196f3;
 }
 .main-section {
   background-color: var(--darkgrey);
@@ -218,6 +227,9 @@ h5 {
   margin: 0;
   padding: 0 15px 94px;
 }
+figure {
+  margin: 0;
+}
 
 .name {
   font-style: normal;
@@ -248,18 +260,17 @@ h5 {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12);
   border-radius: 0px 0px 4px 4px;
 }
-footer {
-  width: 1600px;
-  height: 252px;
-  background-color: var(--darkgrey);
-  margin-top: 0px;
+.footer {
+  background: var(--darkgrey);
+  padding: 60px;
 }
-.logo-footer {
-  width: 100%;
-  max-width: 1200px;
-  padding: 60px 15px;
-  margin: 0 auto;
+
+.footer-list {
+  padding-inline-start: 0px;
+  text-align: left;
+  list-style: none;
 }
+
 .adress-text {
   font-style: normal;
   font-weight: 400;
@@ -268,11 +279,20 @@ footer {
   letter-spacing: 0.03em;
   color: var(--white);
 }
-
+.adress-list {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 60px;
+}
 .portfolio-nav-list {
   list-style: none;
+  list-style: none;
+  display: flex;
+  gap: 46px;
+  margin: 0;
+  padding: 32px 0 31px 93px;
 }
-.mail-link-portfolio {
+.mail-link {
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
@@ -282,14 +302,20 @@ footer {
 }
 
 .mail-link-portfolio:hover {
-  color: #800080;
+  color: var(--blue);
 }
 .mail-link-portfolio:focus {
-  color: #800080;
+  color: var(--blue);
 }
 
 .button-list {
   list-style: none;
+  padding: 94px 0 0 0;
+  gap: 8px;
+  justify-content: center;
+  display: flex;
+  list-style: none;
+  padding-inline-start: 40px;
 }
 .button-portfolio {
   width: 91px;
@@ -310,15 +336,42 @@ footer {
   background-color: var(--blue);
   color: var(--white);
 }
+.portfolio-item {
+  display: block;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: #212121;
+  margin: 0 24px 4px 24px;
+  padding-top: 24px;
+}
+.portfolio-product {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+  color: #757575;
+  margin: 6px 0 20px 24px;
+}
 
 .porfolio-main-list {
   list-style: none;
+  gap: 30px;
+  box-sizing: border-box;
+  margin: 50px 0 94px 0;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
 }
 .portfolio-main-list-backgroud {
-  width: 370px;
-  height: 404px;
-  border: 1px solid #eeeeee;
-  background-color: var(--white);
+  border-right: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
