--- a/index.css
+++ b/index.css
@@ -111,7 +111,7 @@ body {
 }
 .main-section {
   background-color: var(--darkgrey);
-  width: 1600px;
+  width: 100%;
   height: 600px;
   display: flex;
   flex-direction: column;
